Translate scheduler-reference.adoc.po

--- a/l10n/po/ja_JP/_guides/scheduler-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/scheduler-reference.adoc.po
@@ -3,97 +3,89 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-05 12:07+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-03-20 00:03+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/scheduler-reference.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - Scheduler Reference Guide"
 msgstr "Quarkus - スケジューラーリファレンスガイド"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:20
-#, fuzzy
 msgid "Modern applications often need to run specific tasks periodically.  There are two scheduler extensions in Quarkus.  The `quarkus-scheduler` extension brings the API and a lightweight in-memory scheduler implementation.  The `quarkus-quartz` extension implements the API from the `quarkus-scheduler` extension and contains a scheduler implementation based on the Quartz library.  You will only need `quarkus-quartz` for more advanced scheduling use cases, such as persistent tasks, clustering and programmatic scheduling of jobs."
-msgstr "最近のアプリケーションでは、定期的に特定のタスクを実行する必要があります。Quarkusには2つのスケジューラーエクステンションがあります。 `quarkus-scheduler` エクステンションには、APIと軽量なインメモリースケジューラーの実装が含まれています。 `quarkus-quartz` エクステンションは、 `quarkus-scheduler` エクステンションのAPIを実装し、Quartzライブラリをベースにしたスケジューラーの実装が含まれています。 `quarkus-quartz` が必要になるのは、持続的タスク、クラスターリング、ジョブのプログラマティックスケジューリングなど、より高度なスケジューリングのユースケースのみです。"
+msgstr "最近のアプリケーションでは、定期的に特定のタスクを実行する必要があります。Quarkusには2つのスケジューラーエクステンションがあります。 `quarkus-scheduler` エクステンションには、APIと軽量なインメモリースケジューラーの実装が含まれています。 `quarkus-quartz` エクステンションは、 `quarkus-scheduler` エクステンションのAPIを実装し、Quartzライブラリをベースにしたスケジューラーの実装が含まれています。 `quarkus-quartz` が必要になるのは、永続的タスク、クラスターリング、ジョブのプログラマティックスケジューリングなど、より高度なスケジューリングのユースケースのみです。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:22
-#, fuzzy
 msgid "If you add the `quarkus-quartz` dependency to your project the lightweight scheduler implementation from the `quarkus-scheduler` extension is automatically disabled."
 msgstr "プロジェクトに `quarkus-quartz` 依存関係を追加すると、 `quarkus-scheduler` エクステンションからの軽量スケジューラーの実装は自動的に無効になります。"
 
 #. type: Title ==
 #: upstream/_guides/scheduler-reference.adoc:23
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Scheduled Methods"
-msgstr "予定されている方法"
+msgstr "スケジュールされたメソッド"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:28
-#, fuzzy
 msgid "If you annotate a method with `@io.quarkus.scheduler.Scheduled` it is automatically scheduled for invocation.  In fact, such a method must be a non-private non-static method of a CDI bean.  As a consequence of being a method of a CDI bean a scheduled method can be annotated with interceptor bindings, such as `@javax.transaction.Transactional` and `@org.eclipse.microprofile.metrics.annotation.Counted`."
 msgstr "メソッドに `@io.quarkus.scheduler.Scheduled` をアノテーションすると、自動的に呼び出されるようにスケジュールされます。実際には、そのようなメソッドはCDI Beanの非プライベート非静的メソッドでなければなりません。CDI Beanのメソッドであることの結果として、スケジュールされたメソッドは、 `@javax.transaction.Transactional` や `@org.eclipse.microprofile.metrics.annotation.Counted` のようなインターセプターバインディングでアノテーションすることができます。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:30
-#, fuzzy
 msgid "If there is no CDI scope defined on the declaring class then `@Singleton` is used."
-msgstr "宣言クラスにCDIスコープが定義されていない場合は、 `@Singleton` を使用します。"
+msgstr "宣言クラスにCDIスコープが定義されていない場合は、 `@Singleton` が使用されます。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:32
-#, fuzzy
 msgid "Furthermore, the annotated method must return `void` and either declare no parameters or one parameter of type `io.quarkus.scheduler.ScheduledExecution`."
 msgstr "さらに、アノテーションされたメソッドは `void` を返し、パラメーターを宣言しないか、 `io.quarkus.scheduler.ScheduledExecution` 型のパラメーターを 1 つだけ宣言する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:34
-#, fuzzy
 msgid "The annotation is repeatable so a single method could be scheduled multiple times."
 msgstr "アノテーションは繰り返し可能なので、1つのメソッドを複数回スケジュールすることができます。"
 
 #. type: Title ===
 #: upstream/_guides/scheduler-reference.adoc:35
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Triggers"
 msgstr "トリガー"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:40
-#, fuzzy
 msgid "A trigger is defined either by the `@Scheduled#cron()` or by the `@Scheduled#every()` attributes.  If both are specified, the cron expression takes precedence.  If none is specified, the build fails with an `IllegalStateException`."
-msgstr "トリガーは、 `@Scheduled#cron()` 属性または `@Scheduled#every()` 属性によって定義されます。両方が指定されている場合、cron 式が優先されます。何も指定されていない場合、ビルドは `IllegalStateException` ."
+msgstr "トリガーは、 `@Scheduled#cron()` 属性または `@Scheduled#every()` 属性によって定義されます。両方が指定されている場合、cron 式が優先されます。何も指定されていない場合、ビルドは `IllegalStateException` で失敗します。"
 
 #. type: Title ====
 #: upstream/_guides/scheduler-reference.adoc:41
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "CRON"
-msgstr "クロン"
+msgstr "CRON"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:45
-#, fuzzy
 msgid "A CRON trigger is defined by a cron-like expression.  For example `\"0 15 10 * * ?\"` fires at 10:15am every day."
-msgstr "CRONトリガは、cronライクな式で定義されています。例えば `\"0 15 10 * * ?\"` は毎日午前10時15分に起動します。"
+msgstr "CRONトリガーは、cronライクな式で定義されています。例えば `\"0 15 10 * * ?\"` は毎日午前10時15分に起動します。"
 
 #. type: Block title
 #: upstream/_guides/scheduler-reference.adoc:46
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "CRON Trigger Example"
 msgstr "CRONトリガーの例"
 
@@ -107,19 +99,17 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:56
-#, fuzzy
 msgid "The syntax used in CRON expressions is controlled by the `quarkus.scheduler.cron-type` property.  The values can be `cron4j`, `quartz`, `unix` and `spring`.  `quartz` is used by default."
-msgstr "CRON 式で使用される構文は `quarkus.scheduler.cron-type` プロパティーによって制御されます。 `quartz` 値は `cron4j` , `quartz` , `unix` および `spring` です。"
+msgstr "CRON 式で使用される構文は `quarkus.scheduler.cron-type` プロパティーによって制御されます。 値は `cron4j` , `quartz` , `unix` および `spring` のいづれかです。`quartz` がデフォルトで使用されます。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:58
-#, fuzzy
 msgid "If a CRON expression starts with `{` and ends with `}` then the scheduler attempts to find a corresponding config property and use the configured value instead."
 msgstr "CRON式が `{` で始まり `}` で終わる場合、スケジューラーは対応するコンフィグプロパティーを検索し、設定された値を代わりに使用しようとします。"
 
 #. type: Block title
 #: upstream/_guides/scheduler-reference.adoc:59
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "CRON Config Property Example"
 msgstr "CRON設定プロパティーの例"
 
@@ -133,19 +123,18 @@ msgstr ""
 
 #. type: Title ====
 #: upstream/_guides/scheduler-reference.adoc:66
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Intervals"
 msgstr "インターバル"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:72
-#, fuzzy
 msgid "An interval trigger defines a period between invocations.  The period expression is based on the ISO-8601 duration format `PnDTnHnMn.nS` and the value of `@Scheduled#every()` is parsed with `java.time.Duration#parse(CharSequence)`.  However, if an expression starts with a digit then the `PT` prefix is added automatically.  So for example, `15m` can be used instead of `PT15M` and is parsed as \"15 minutes\"."
-msgstr "インターバル トリガは、呼び出しの間の期間を定義します。ピリオド式は ISO-8601 の期間フォーマット `PnDTnHnMn.nS` に基づいており、 `@Scheduled#every()` の値は `java.time.Duration#parse(CharSequence)` で解析されます。ただし、式が数字で始まる場合は、 `PT` の接頭辞が自動的に追加されます。例えば、 `PT15M` の代わりに `15m` を使用することができ、「15 分」と解析されます。"
+msgstr "インターバルトリガーは、呼び出しの間の期間を定義します。期間式は ISO-8601 の期間フォーマット `PnDTnHnMn.nS` に基づいており、 `@Scheduled#every()` の値は `java.time.Duration#parse(CharSequence)` で解析されます。ただし、式が数字で始まる場合は、 `PT` の接頭辞が自動的に追加されます。例えば、 `PT15M` の代わりに `15m` を使用することができ、「15 分」と解析されます。"
 
 #. type: Block title
 #: upstream/_guides/scheduler-reference.adoc:73
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Interval Trigger Example"
 msgstr "インターバルトリガーの例"
 
@@ -159,13 +148,12 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:81
-#, fuzzy
 msgid "If a value starts with `{` and ends with `}` then the scheduler attempts to find a corresponding config property and use the configured value instead."
 msgstr "値が `{` で始まり `}` で終わる場合、スケジューラーは対応するコンフィグプロパティーを探して、設定された値を代わりに使用しようとします。"
 
 #. type: Block title
 #: upstream/_guides/scheduler-reference.adoc:82
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Interval Config Property Example"
 msgstr "インターバル設定プロパティーの例"
 
@@ -179,19 +167,18 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/scheduler-reference.adoc:89
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Identity"
 msgstr "アイデンティティ"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:94
-#, fuzzy
 msgid "By default, a unique id is generated for each scheduled method.  This id is used in log messages and during debugging.  Sometimes a possibility to specify an explicit id may come in handy."
 msgstr "デフォルトでは、スケジュールされた各メソッドに対して一意の ID が生成されます。このIDはログメッセージやデバッグ中に使用されます。時には、明示的な id を指定することが便利な場合もあります。"
 
 #. type: Block title
 #: upstream/_guides/scheduler-reference.adoc:95
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Identity Example"
 msgstr "アイデンティティの例"
 
@@ -205,19 +192,17 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/scheduler-reference.adoc:102
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Delayed Execution"
 msgstr "遅延実行"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:105
-#, fuzzy
 msgid "`@Scheduled` provides two ways to delay the time a trigger should start firing at."
-msgstr "`@Scheduled` では、トリガーが発射を開始すべき時間を遅らせるための2つの方法を提供しています。"
+msgstr "`@Scheduled` では、トリガーが発報を開始時刻を遅らせるための2つの方法を提供しています。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:107
-#, fuzzy
 msgid "`@Scheduled#delay()` and `@Scheduled#delayUnit()` form the initial delay together."
 msgstr "`@Scheduled#delay()` と `@Scheduled#delayUnit()` は初期遅延を一緒に形成します。"
 
@@ -231,21 +216,18 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:114
-#, fuzzy
 msgid "The trigger fires for the first time two hours after the application start."
-msgstr "塗布開始から2時間後に初めてトリガーが発射されます。"
+msgstr "アプリケーション開始から2時間後に初めてトリガーが発射されます。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:116
-#, fuzzy
 msgid "The final value is always rounded to full second."
 msgstr "最終的な値は常に1秒単位で丸められます。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:121
-#, fuzzy
 msgid "`@Scheduled#delayed()` is a text alternative to the properties above.  The period expression is based on the ISO-8601 duration format `PnDTnHnMn.nS` and the value is parsed with `java.time.Duration#parse(CharSequence)`.  However, if an expression starts with a digit, the `PT` prefix is added automatically.  So for example, `15s` can be used instead of `PT15S` and is parsed as \"15 seconds\"."
-msgstr "`@Scheduled#delayed()` は、上記のプロパティーの代替テキストです。ピリオド式は ISO-8601 duration format `PnDTnHnMn.nS` に基づいており、値は `java.time.Duration#parse(CharSequence)` で解析されます。ただし、式が数字で始まる場合は、 `PT` の接頭辞が自動的に追加されます。そのため、例えば `PT15S` の代わりに `15s` を使用することができ、「15 秒」と解析されます。"
+msgstr "`@Scheduled#delayed()` は、上記のプロパティーのテキスト形式での代替です。ピリオド式は ISO-8601 duration format `PnDTnHnMn.nS` に基づいており、値は `java.time.Duration#parse(CharSequence)` で解析されます。ただし、式が数字で始まる場合は、 `PT` の接頭辞が自動的に追加されます。そのため、例えば `PT15S` の代わりに `15s` を使用することができ、「15 秒」と解析されます。"
 
 #. type: delimited block -
 #: upstream/_guides/scheduler-reference.adoc:126
@@ -257,13 +239,11 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:129
-#, fuzzy
 msgid "If `@Scheduled#delay()` is set to a value greater then zero the value of `@Scheduled#delayed()` is ignored."
 msgstr "`@Scheduled#delay()` がゼロよりも大きい値に設定されている場合、 `@Scheduled#delayed()` の値は無視されます。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:132
-#, fuzzy
 msgid "The main advantage over `@Scheduled#delay()` is that the value is configurable.  If the value starts with `{` and ends with `}` then the scheduler attempts to find a corresponding config property and use the configured value instead:"
 msgstr "`@Scheduled#delay()` と比較した場合の主な利点は、値が設定可能であることです。値が `{` で始まり `}` で終わる場合、スケジューラーは対応するコンフィグプロパティーを見つけようとし、代わりに設定された値を使用します。"
 
@@ -277,19 +257,17 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:139
-#, fuzzy
 msgid "The config property `myMethod.delay.expr` is used to set the delay."
 msgstr "遅延の設定には、configプロパティー `myMethod.delay.expr` を使用します。"
 
 #. type: Title ===
 #: upstream/_guides/scheduler-reference.adoc:141
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Concurrent Execution"
 msgstr "同時実行"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:145
-#, fuzzy
 msgid "By default, a scheduled method can be executed concurrently.  Nevertheless, it is possible to specify the strategy to handle concurrent executions via `@Scheduled#concurrentExecution()`."
 msgstr "デフォルトでは、スケジュールされたメソッドは同時に実行することができます。それにもかかわらず、 `@Scheduled#concurrentExecution()` を通じて同時実行を処理するための戦略を指定することが可能です。"
 
@@ -311,25 +289,23 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:156
-#, fuzzy
 msgid "Concurrent executions are skipped."
 msgstr "同時実行はスキップされます。"
 
 #. type: Title ==
 #: upstream/_guides/scheduler-reference.adoc:157
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Scheduler"
 msgstr "スケジューラー"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:160
-#, fuzzy
 msgid "Quarkus provides a built-in bean of type `io.quarkus.scheduler.Scheduler` that can be injected and used to pause/resume the scheduler."
 msgstr "Quarkusは、 `io.quarkus.scheduler.Scheduler` 型のビルトインBeanを提供しており、これを注入してスケジューラーを一時停止/再開するために使用することができます。"
 
 #. type: Block title
 #: upstream/_guides/scheduler-reference.adoc:161
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Scheduler Injection Example"
 msgstr "スケジューラーインジェクションの例"
 
@@ -369,31 +345,28 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:181
-#, fuzzy
 msgid "Pause all triggers."
 msgstr "すべてのトリガーを一時停止します。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:182
-#, fuzzy
 msgid "Resume the scheduler."
 msgstr "スケジューラーを再開します。"
 
 #. type: Title ==
 #: upstream/_guides/scheduler-reference.adoc:183
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Programmatic Scheduling"
 msgstr "プログラムスケジューリング"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:186
-#, fuzzy
 msgid "If you need to schedule a job programmatically you'll need to add the link:quartz[Quartz extension] and use the Quartz API directly."
-msgstr "プログラムでジョブをスケジュールする必要がある場合は、 link:quartz[Quartzエクステンションを] 追加してQuartz APIを直接使用する必要があります。"
+msgstr "プログラムでジョブをスケジュールする必要がある場合は、 link:quartz[Quartzエクステンション] を追加してQuartz APIを直接使用する必要があります。"
 
 #. type: Block title
 #: upstream/_guides/scheduler-reference.adoc:187
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Programmatic Scheduling with Quartz API"
 msgstr "Quartz APIを使用したプログラマティックスケジューリング"
 
@@ -431,19 +404,17 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:211
-#, fuzzy
 msgid "By default, the scheduler is not started unless a `@Scheduled` business method is found. You may need to force the start of the scheduler for \"pure\" programmatic scheduling. See also <<quartz.adoc#quartz-configuration-reference,Quartz Configuration Reference>>."
-msgstr "デフォルトでは、 `@Scheduled` ビジネスメソッドが見つからない限り、スケジューラーは起動されません。純粋な」プログラマティックスケジューリングのために、スケジューラーを強制的に起動する必要があるかもしれません。 link:quartz.html#quartz-configuration-reference[Quartz Configuration Reference] も参照してください。"
+msgstr "デフォルトでは、 `@Scheduled` ビジネスメソッドが見つからない限り、スケジューラーは起動されません。「純粋な」プログラマティックスケジューリングのために、スケジューラーを強制的に起動する必要があるかもしれません。 link:quartz.html#quartz-configuration-reference[Quartz Configuration Reference] も参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/scheduler-reference.adoc:212
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Scheduled Methods and Testing"
-msgstr "予定されている方法と試験"
+msgstr "スケジュールされたメソッドとテスト"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:218
-#, fuzzy
 msgid "It is often desirable to disable the scheduler when running the tests.  The scheduler can be disabled through the runtime config property `quarkus.scheduler.enabled`.  If set to `false` the scheduler is not started even though the application contains scheduled methods.  You can even disable the scheduler for particular <<getting-started-testing#testing_different_profiles,Test Profiles>>."
 msgstr "テストを実行する際には、スケジューラーを無効にすることが望ましいことがよくあります。スケジューラーは、ランタイム設定プロパティー `quarkus.scheduler.enabled` を通じて無効にすることができます。 `false` に設定すると、アプリケーションにスケジュールされたメソッドが含まれていても、 スケジューラーは起動しません。特定の link:getting-started-testing.html#testing_different_profiles[テストプロファイル] に対してスケジューラーを無効にすることもできます。"
 
