--- a/l10n/po/ja_JP/_guides/dev-ui.adoc.po
+++ b/l10n/po/ja_JP/_guides/dev-ui.adoc.po
@@ -371,7 +371,7 @@ msgstr "フルページテンプレートへのリンク"
 #: upstream/_guides/dev-ui.adoc:186
 #, fuzzy
 msgid "Full-page templates for extensions live under a pre-defined `{devRootAppend}/{groupId}.{artifactId}/` directory that is referenced using the `urlbase` template parameter. Using configuration defaults, that would resolve to `/q/dev/io.quarkus.quarkus-cache/`, as an example."
-msgstr "拡張機能のフルページテンプレートは、あらかじめ定義された `{devRootAppend}/{groupId}.{artifactId}/` ディレクトリの下に置かれ、 `urlbase` template パラメータで参照されます。設定のデフォルトでは、例として `/q/dev/io.quarkus.quarkus-cache/` となります。"
+msgstr "エクステンションのフルページテンプレートは、あらかじめ定義された `{devRootAppend}/{groupId}.{artifactId}/` ディレクトリの下に置かれ、 `urlbase` template パラメータで参照されます。設定のデフォルトでは、例として `/q/dev/io.quarkus.quarkus-cache/` となります。"
 
 #. type: Plain text
 #: upstream/_guides/dev-ui.adoc:188
