--- a/l10n/po/ja_JP/_guides/mailer.adoc.po
+++ b/l10n/po/ja_JP/_guides/mailer.adoc.po
@@ -114,7 +114,7 @@ msgstr ""
 #: upstream/_guides/mailer.adoc:44
 #, fuzzy
 msgid "If you already have an existing project, add the `mailer` extension:"
-msgstr "既存のプロジェクトがある場合は、 `mailer` の拡張子を追加してください。"
+msgstr "既存のプロジェクトがある場合は、 `mailer` のエクステンションを追加してください。"
 
 #. type: delimited block -
 #: upstream/_guides/mailer.adoc:48
@@ -172,7 +172,7 @@ msgstr ""
 #: upstream/_guides/mailer.adoc:84
 #, fuzzy
 msgid "It is recommended to encrypt any sensitive data, such as the `quarkus.mailer.password`.  One approach is to save the value into a secure store like HashiCorp Vault, and refer to it from the configuration.  Assuming for instance that Vault contains key `mail-password` at path `myapps/myapp/myconfig`, then the mailer extension can be simply configured as:"
-msgstr "`quarkus.mailer.password` のようなセンシティブなデータは暗号化しておくことをお勧めします。一つの方法としては、HashiCorp Vault のような安全なストアに値を保存し、設定から参照するという方法があります。例えば、Vault がパス `myapps/myapp/myconfig` にキー `mail-password` を含んでいると仮定すると、メーラーの拡張子は単純に次のように設定することができます。"
+msgstr "`quarkus.mailer.password` のようなセンシティブなデータは暗号化しておくことをお勧めします。一つの方法としては、HashiCorp Vault のような安全なストアに値を保存し、設定から参照するという方法があります。例えば、Vault がパス `myapps/myapp/myconfig` にキー `mail-password` を含んでいると仮定すると、メーラー エクステンションは単純に次のように設定することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/mailer.adoc:90
