--- a/l10n/po/ja_JP/_guides/reactive-routes.adoc.po
+++ b/l10n/po/ja_JP/_guides/reactive-routes.adoc.po
@@ -65,7 +65,7 @@ msgstr "リアクティブルートの宣言"
 #: upstream/_guides/reactive-routes.adoc:31
 #, fuzzy
 msgid "The first way to use reactive routes is to use the `@Route` annotation.  To have access to this annotation, you need to add the `quarkus-vertx-web` extension:"
-msgstr "リアクティブルートを使用する最初の方法は、 `@Route` アノテーションを使用することです。このアノテーションにアクセスするには、 `quarkus-vertx-web` の拡張子を追加する必要があります。"
+msgstr "リアクティブルートを使用する最初の方法は、 `@Route` アノテーションを使用することです。このアノテーションにアクセスするには、 `quarkus-vertx-web` エクステンションを追加する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-routes.adoc:33
@@ -1172,7 +1172,7 @@ msgstr "ルート登録、オプション、利用可能なハンドラーの詳
 #: upstream/_guides/reactive-routes.adoc:560
 #, fuzzy
 msgid "`Router` access is provided by the `quarkus-vertx-http` extension.  If you use `quarkus-resteasy` or `quarkus-vertx-web`, the extension will be added automatically."
-msgstr "`Router` のアクセスは、 `quarkus-vertx-http` の拡張子で提供されています。 `quarkus-resteasy` または `quarkus-vertx-web` を使用している場合、拡張子は自動的に追加されます。"
+msgstr "`Router` のアクセスは、 `quarkus-vertx-http` エクステンションで提供されています。 `quarkus-resteasy` または `quarkus-vertx-web` を使用している場合、エクステンションは自動的に追加されます。"
 
 #. type: Title ==
 #: upstream/_guides/reactive-routes.adoc:562
@@ -1238,13 +1238,13 @@ msgstr "OpenAPIとSwagger UIの追加"
 #: upstream/_guides/reactive-routes.adoc:591
 #, fuzzy
 msgid "You can add support for link:https://www.openapis.org/[OpenAPI] and link:https://swagger.io/tools/swagger-ui/[Swagger UI] by using the `quarkus-smallrye-openapi` extension."
-msgstr "`quarkus-smallrye-openapi` の拡張子を使用して、 link:https://www.openapis.org/[OpenAPI] と link:https://swagger.io/tools/swagger-ui/[Swagger UI の] サポートを追加することができます。"
+msgstr "`quarkus-smallrye-openapi` エクステンションを使用して、 link:https://www.openapis.org/[OpenAPI] と link:https://swagger.io/tools/swagger-ui/[Swagger UI の] サポートを追加することができます。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-routes.adoc:593
 #, fuzzy
 msgid "Add the extension by running this command:"
-msgstr "このコマンドを実行して拡張子を追加します。"
+msgstr "このコマンドを実行してエクステンションを追加します。"
 
 #. type: delimited block -
 #: upstream/_guides/reactive-routes.adoc:597
