--- a/l10n/po/ja_JP/_guides/spring-di.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-di.adoc.po
@@ -116,7 +116,7 @@ msgstr ""
 #: upstream/_guides/spring-di.adoc:52
 #, fuzzy
 msgid "This command generates a Maven project with a REST endpoint and imports the `spring-di` extension."
-msgstr "このコマンドは、RESTエンドポイントを持つMavenプロジェクトを生成し、 `spring-di` 拡張子をインポートします。"
+msgstr "このコマンドは、RESTエンドポイントを持つMavenプロジェクトを生成し、 `spring-di` エクステンションをインポートします。"
 
 #. type: Plain text
 #: upstream/_guides/spring-di.adoc:55
