--- a/l10n/po/ja_JP/_guides/vertx.adoc.po
+++ b/l10n/po/ja_JP/_guides/vertx.adoc.po
@@ -411,7 +411,7 @@ msgstr "非同期処理"
 #: upstream/_guides/vertx.adoc:197
 #, fuzzy
 msgid "To asynchronously handle the HTTP request, the endpoint method must return a `java.util.concurrent.CompletionStage` or an `io.smallrye.mutiny.Uni` (requires the `quarkus-resteasy-mutiny` extension):"
-msgstr "HTTP リクエストを非同期に処理するには、エンドポイントメソッドは `java.util.concurrent.CompletionStage` または `io.smallrye.mutiny.Uni` を返さなければなりません (拡張子 `quarkus-resteasy-mutiny` が必要です)。"
+msgstr "HTTP リクエストを非同期に処理するには、エンドポイントメソッドは `java.util.concurrent.CompletionStage` または `io.smallrye.mutiny.Uni` を返さなければなりません (エクステンション `quarkus-resteasy-mutiny` が必要です)。"
 
 #. type: delimited block -
 #: upstream/_guides/vertx.adoc:202 upstream/_guides/vertx.adoc:240
@@ -548,7 +548,7 @@ msgstr "`text/event-stream` レスポンスコンテンツ型の宣言"
 #: upstream/_guides/vertx.adoc:270
 #, fuzzy
 msgid "returning a https://www.reactive-streams.org/[Reactive Streams] `Publisher` or Mutiny `Multi` (requires the `quarkus-resteasy-mutiny` extension)"
-msgstr "link:https://www.reactive-streams.org/[Reactive Streams] `Publisher` または Mutiny `Multi` を返します ( `quarkus-resteasy-mutiny` の拡張子が必要です)。"
+msgstr "link:https://www.reactive-streams.org/[Reactive Streams] `Publisher` または Mutiny `Multi` を返します ( `quarkus-resteasy-mutiny` エクステンションが必要です)。"
 
 #. type: Plain text
 #: upstream/_guides/vertx.adoc:272
