--- a/l10n/po/ja_JP/_versions/1.11/guides/kafka-streams.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/kafka-streams.adoc.po
@@ -859,7 +859,7 @@ msgstr "パイプラインの結果は `temperatures-aggregated` トピックに
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kafka-streams.adoc:450
 msgid "The Kafka Streams extension is configured via the Quarkus configuration file `application.properties`.  Create the file `aggregator/src/main/resources/application.properties` with the following contents:"
-msgstr "Kafka Streamsの拡張子は、Quarkusの設定ファイル `application.properties` で設定します。ファイル `aggregator/src/main/resources/application.properties` を以下の内容で作成します。"
+msgstr "Kafka Streams エクステンションは、Quarkusの設定ファイル `application.properties` で設定します。ファイル `aggregator/src/main/resources/application.properties` を以下の内容で作成します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/kafka-streams.adoc:456
