--- a/l10n/po/ja_JP/_versions/1.7/guides/cdi-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/cdi-reference.adoc.po
@@ -89,7 +89,7 @@ msgstr "link:http://docs.jboss.org/cdi/spec/2.0/cdi-spec.html#bean_defining_anno
 #. type: Plain text
 #: upstream/_versions/1.7/guides/cdi-reference.adoc:43
 msgid "Quarkus extensions may declare additional discovery rules. For example, `@Scheduled` business methods are registered even if the declaring class is not annotated with a bean defining annotation."
-msgstr "Quarkus 拡張機能は、追加のディスカバリールールを宣言することができます。たとえば、`@Scheduled` ビジネスメソッドは、宣言するクラスが Bean 定義アノテーションでアノテーションされていなくても登録されます。"
+msgstr "Quarkus エクステンションは、追加のディスカバリールールを宣言することができます。たとえば、`@Scheduled` ビジネスメソッドは、宣言するクラスが Bean 定義アノテーションでアノテーションされていなくても登録されます。"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/cdi-reference.adoc:44
@@ -1088,7 +1088,7 @@ msgstr "quarkus.arc.unremovable-types=org.acme.Foo,org.acme.*,Bar\n"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/cdi-reference.adoc:417
 msgid "Furthermore, extensions can eliminate possible false positives by producing `UnremovableBeanBuildItem`."
-msgstr "さらに、拡張機能は `UnremovableBeanBuildItem` を生成することで、可能性のある誤検出を排除することができます。"
+msgstr "さらに、エクステンションは `UnremovableBeanBuildItem` を生成することで、可能性のある誤検出を排除することができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/cdi-reference.adoc:420
@@ -1120,7 +1120,7 @@ msgstr "Quarkus は、CDI が現在サポートしていない機能を追加し
 #. type: Plain text
 #: upstream/_versions/1.7/guides/cdi-reference.adoc:435
 msgid "Say there is a Quarkus extension that among other things declares a few CDI beans like the following code does:"
-msgstr "以下のコードのようにいくつかの CDI Bean を宣言する Quarkus 拡張機能があるとします。"
+msgstr "以下のコードのようにいくつかの CDI Bean を宣言する Quarkus エクステンションがあるとします。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/cdi-reference.adoc:440
@@ -1186,7 +1186,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/cdi-reference.adoc:463
 msgid "The idea is that the extension auto-configures things for the user, eliminating a lot of boilerplate - we can just `@Inject` a `Tracer` wherever it is needed.  Now imagine that in our application we would like to utilize the configured `Tracer`, but we need to customize it a little, for example by providing a custom `Reporter`.  The only thing that would be needed in our application would be something like the following:"
-msgstr "アイデアは、拡張機能がユーザーのために自動設定を行い、多くのボイラープレートを排除するということです。必要な場所であれば、`@Inject` を `Tracer` にすることができます。私たちのアプリケーションで、設定された `Tracer` を利用しようとする場合は、、カスタムの `Reporter` を提供するなど、少しカスタマイズする必要があります。アプリケーションで必要になるのは、次のようなものだけです。"
+msgstr "アイデアは、エクステンションがユーザーのために自動設定を行い、多くのボイラープレートを排除するということです。必要な場所であれば、`@Inject` を `Tracer` にすることができます。私たちのアプリケーションで、設定された `Tracer` を利用しようとする場合は、、カスタムの `Reporter` を提供するなど、少しカスタマイズする必要があります。アプリケーションで必要になるのは、次のようなものだけです。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/cdi-reference.adoc:469
@@ -1217,7 +1217,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/cdi-reference.adoc:479
 msgid "`@DefaultBean` allows extensions (or any other code for that matter) to provide defaults while backing off if beans of that type are supplied in any way Quarkus supports."
-msgstr "`@DefaultBean` では、拡張機能 (またはそのための他のコード) が Quarkus がサポートする何らかの方法でその型の Bean が提供されている場合、バックオフ中にデフォルトを提供することができます。"
+msgstr "`@DefaultBean` では、エクステンション (またはそのための他のコード) が Quarkus がサポートする何らかの方法でその型の Bean が提供されている場合、バックオフ中にデフォルトを提供することができます。"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/cdi-reference.adoc:480
