--- a/l10n/po/ja_JP/_guides/security-openid-connect.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect.adoc.po
@@ -491,7 +491,7 @@ msgstr "新しいレルムを作成するには、{quickstarts-tree-url}/securit
 #: upstream/_guides/security-openid-connect.adoc:232
 #, fuzzy
 msgid "If you want to use the Keycloak Admin Client to configure your server from your application you need to include the `quarkus-keycloak-admin-client` extension."
-msgstr "Keycloak Admin Clientを使用して、アプリケーションからサーバーを設定したい場合は、 `quarkus-keycloak-admin-client` の拡張子を含める必要があります。"
+msgstr "Keycloak Admin Clientを使用して、アプリケーションからサーバーを設定したい場合は、 `quarkus-keycloak-admin-client` エクステンションを含める必要があります。"
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect.adoc:233
