--- a/l10n/po/ja_JP/_versions/1.7/guides/tests-with-coverage.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/tests-with-coverage.adoc.po
@@ -28,32 +28,32 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/tests-with-coverage.adoc:22
 msgid "Learn how to measure the test coverage of your application. This guide covers:"
-msgstr ""
+msgstr "アプリケーションのテストカバレッジを測定する方法をご紹介します。このガイドでは、以下の内容をカバーしています。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/tests-with-coverage.adoc:24
 msgid "Measuring the coverage of your Unit Tests"
-msgstr ""
+msgstr "ユニットテストのカバレッジを測定する"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/tests-with-coverage.adoc:25
 msgid "Measuring the coverage of your Integration Tests"
-msgstr ""
+msgstr "統合テストのカバレッジを測定する"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/tests-with-coverage.adoc:26
 msgid "Separating the execution of your Unit Tests and Integration Tests"
-msgstr ""
+msgstr "ユニットテストと統合テストの実行を分離する"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/tests-with-coverage.adoc:27
 msgid "Consolidating the coverage for all your tests"
-msgstr ""
+msgstr "すべてのテストのカバレッジを統合"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/tests-with-coverage.adoc:29
 msgid "Please note that code coverage is not supported in native mode."
-msgstr ""
+msgstr "ネイティブモードではコードカバレッジはサポートされていませんのでご注意ください。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/tests-with-coverage.adoc:30
@@ -89,7 +89,7 @@ msgstr "Apache Maven {maven-version}"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/tests-with-coverage.adoc:39
 msgid "Having completed the link:getting-started-testing[Testing your application guide]"
-msgstr ""
+msgstr "link:https://quarkus.io/guides/getting-started-testing[アプリケーションガイドのテスト] が完了済であること"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/tests-with-coverage.adoc:40
@@ -100,7 +100,7 @@ msgstr "アーキテクチャ"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/tests-with-coverage.adoc:44
 msgid "The application built in this guide is just a JAX-RS endpoint (hello world) that relies on dependency injection to use a service.  The service will be tested with JUnit 5 and the endpoint will be annotated via a `@QuarkusTest` annotation."
-msgstr ""
+msgstr "このガイドで構築されたアプリケーションは、サービスを使用するために依存性インジェクションに依存した JAX-RS エンドポイント (hello world) に過ぎません。サービスは JUnit 5 でテストされ、エンドポイントには `@QuarkusTest` のアノテーションが付けられます。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/tests-with-coverage.adoc:45
@@ -110,23 +110,23 @@ msgstr "ソリューション"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/tests-with-coverage.adoc:49
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step. However, you can go right to the completed example.  Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive]."
-msgstr ""
+msgstr "次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。しかし、完成した例にすぐに進むことができます。Git リポジトリをクローンします: `git clone {quickstarts-clone-url}` 、または {quickstarts-archive-url}[archive] をダウンロードします。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/tests-with-coverage.adoc:51
 msgid "The solution is located in the `tests-with-coverage-quickstart` {quickstarts-tree-url}/tests-with-coverage-quickstart[directory]."
-msgstr ""
+msgstr "ソリューションは `tests-with-coverage-quickstart` {quickstarts-tree-url}/tests-with-coverage-quickstart[directory] にあります。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/tests-with-coverage.adoc:52
 #, no-wrap
 msgid "Starting from a simple project and two tests"
-msgstr ""
+msgstr "簡単なプロジェクトと2つのテストから始める"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/tests-with-coverage.adoc:55
 msgid "Let's start from an empty application created with the Quarkus Maven plugin:"
-msgstr ""
+msgstr "Quarkus Mavenプラグインで作成した空のアプリケーションから始めてみましょう。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/tests-with-coverage.adoc:62
@@ -146,7 +146,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/tests-with-coverage.adoc:67
 msgid "First, an application serving a hello endpoint:"
-msgstr ""
+msgstr "まず、helloエンドポイントを提供するアプリケーション:"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/tests-with-coverage.adoc:71
@@ -229,7 +229,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/tests-with-coverage.adoc:105
 msgid "This endpoint uses a greeting service:"
-msgstr ""
+msgstr "このエンドポイントは、グリーティングサービスを利用しています。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/tests-with-coverage.adoc:111
@@ -507,7 +507,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/tests-with-coverage.adoc:285
 #, no-wrap
 msgid "Measuring separately the coverage of each test type"
-msgstr ""
+msgstr "各テストタイプのカバレッジを個別に測定"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/tests-with-coverage.adoc:289
@@ -576,7 +576,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/tests-with-coverage.adoc:351
 #, no-wrap
 msgid "The coverage does not seem to correspond to the reality"
-msgstr ""
+msgstr "カバレッジが現実と一致していないように見える"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/tests-with-coverage.adoc:354
@@ -591,7 +591,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/tests-with-coverage.adoc:358
 msgid "During the report generation, you may have noticed a warning:"
-msgstr ""
+msgstr "レポート生成中に警告が表示されることがあります。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/tests-with-coverage.adoc:363
@@ -1000,5 +1000,6 @@ msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/tests-with-coverage.adoc:708
+#, fuzzy
 msgid "You now have all the information you need to study the coverage of your tests! But remember, some code that is not covered is certinaly not well tested. But some code that is covered is not necessarily *well* tested. Make sure to write good tests!"
-msgstr ""
+msgstr "これで、テストのカバレッジを研究するために必要なすべての情報を手に入れることができました!しかし、カバーされていないコードは、確かに十分にテストされていないものがありますが、カバーされているコードの中には、必ずしも *十分に* テストされていないものもあることを覚えておいてください。良いテストを書くようにしましょう!"
